fix: various fixes
* remove animation from global-button on mobile
* remove tap highlight effect on mobile
* change position to 'absolute' on desktop for language dropdown menu
* add check to close any pop up when overlay is pressed
* add check to manage body scrolling when any pop up opened
* change height of car image in 'car-buyback' mobile section from fixed to auto
* replace 'h3' tag with 'div class="h3"'
* add scale calcs for blocks and images in 'urgent-buyout' section for mobile

--- a/pages/home.html
+++ b/pages/home.html
@@ -66,9 +66,9 @@
 
     <div class="car-buyback">
       <div class="car-buyback-content">
-        <h3>
+        <div class="h3">
           АВТОВИКУП ПІСЛЯ ДТП ЗА 2 ГОДИНИ, ЦІНА – ДО 95% РИНКОВОЇ ВАРТОСТІ
-        </h3>
+        </div>
 
         <div class="car-buyback-content-text-block">
           <div class="car-buyback-info">
@@ -99,14 +99,14 @@
     </div>
 
     <div class="car-buyback-mobile" style="background-color: #15151857;">
-      <img style="height: 192px" src="../img/car-buyback-mobile.png" alt="car-buyback-mobile-image">
+      <img style="height: auto" src="../img/car-buyback-mobile.png" alt="car-buyback-mobile-image">
     </div>
 
     <div class="buyback-process">
       <div class="buyback-process-content">
-        <h3>
+        <div class="h3">
           ПРОЦЕС ВИКУПУ АВТОМОБІЛЯ ПІСЛЯ ДТП
-        </h3>
+        </div>
 
         <div class="buyback-process-steps-section">
           <div class="buyback-process-step-block-1-row">
@@ -161,9 +161,9 @@
     <div class="urgent-buyout">
       <div class="urgent-buyout-content">
         <div class="urgent-buyout-advantages-block">
-          <h3>
+          <div class="h3">
             ПЕРЕВАГИ ТЕРМІНОВОГО ВИКУПУ
-          </h3>
+          </div>
           <div class="urgent-buyout-list">
             <div class="urgent-buyout-list-item">
               <img
@@ -214,9 +214,9 @@
         </div>
 
         <div class="urgent-buyout-guarantees-block">
-          <h3>
+          <div class="h3">
             ГАРАНТІЇ
-          </h3>
+          </div>
           <div class="urgent-buyout-list-2">
             <div class="urgent-buyout-list-item">
               <img
@@ -269,9 +269,9 @@
 
     <div class="repurchased-cars">
       <div class="repurchased-cars-content">
-        <h3>
+        <div class="h3">
           ВИКУПЛЕНІ АВТОМОБІЛІ ПІСЛЯ ДТП
-        </h3>
+        </div>
         <div class="repurchased-cars-slider-wrapper">
           <div class="repurchased-cars-slider">
             <div class="repurchased-cars-slider-block">
@@ -666,14 +666,14 @@
     <div class="cities">
       <div class="cities-content">
         <div class="cities-info-block">
-          <h3>МІСТА, ДЕ ПРАЦЮЄ TOPVYKUP</h3>
+          <div class="h3">МІСТА, ДЕ ПРАЦЮЄ TOPVYKUP</div>
           <div class="cities-text-block">
             <img class="cities-mark" src="../img/cities-mark.svg" alt="cities-mark">
             <p>Здійснюємо терміновий викуп битих машин по всій Україні,
               а саме: в 
               <a>Києві</a>, 
               <a>Дніпрі</a>, 
-              <a>Львові</a>, 
+              <a href="lviv.html">Львові</a>, 
               <a>Одесі</a>, 
               <a>Харкові</a>, 
               <a>Кривому Розі</a>, 
@@ -717,7 +717,7 @@
 
     <div class="blog-articles">
       <div class="blog-articles-content">
-        <h3>ОСТАННІ СТАТТІ БЛОГУ</h3>
+        <div class="h3">ОСТАННІ СТАТТІ БЛОГУ</div>
         <div class="blog-articles-info-block">
           <div class="blog-articles-info-block-item">
             <img src="../img/blog-articles-1-image.jpg" alt="car-buyback-image">
@@ -855,7 +855,7 @@
             text="БЛОГ"
             bgcolor="#7AB8FF"
             imgsrc="../img/button-arrow.svg"
-            align-self="center"
+            alignSelf="center"
             href="blog.html"
           >
           </global-button>
@@ -864,7 +864,7 @@
 
     <div class="common-questions">
       <div class="common-questions-content">
-        <h3>ЧАСТІ ПИТАННЯ</h3>
+        <div class="h3">ЧАСТІ ПИТАННЯ</div>
         <div class="common-questions-info-block">
           <div class="common-questions-list">
             <div class="common-questions-list-item">
@@ -930,7 +930,7 @@
 
     <div class="reviews">
       <div class="reviews-content">
-        <h3>ВІДГУКИ</h3>
+        <div class="h3">ВІДГУКИ</div>
         <div class="reviews-info-container">
           <div class="reviews-info-item">
             <p class="reviews-info-date">15.11.2022</p>
@@ -966,7 +966,7 @@
           </div>
         </div>
         <div class="reviews-leave-review">
-          <h3>ЗАЛИШИТИ ВІДГУК</h3>
+          <div class="h3">ЗАЛИШИТИ ВІДГУК</div>
           <div class="reviews-select-stars-mobile">
             <img src="../img/reviews-star-empty.svg" alt="reviews-star-image" class="star">
             <img src="../img/reviews-star-empty.svg" alt="reviews-star-image" class="star">
@@ -1021,7 +1021,7 @@
 
     <div class="editor-group">
       <div class="editor-group-content">
-        <h3>РЕДАКТОРСЬКА ГРУПА</h3>
+        <div class="h3">РЕДАКТОРСЬКА ГРУПА</div>
         <div class="editor-group-info">
           <div class="editor">
             <img src="../img/editor-1.jpg" alt="editor-1-image">
@@ -1056,7 +1056,7 @@
       <div class="floating-white-block"></div>
       <div class="floating-blue-block"></div>
       <div class="send-request-content">
-        <h1>TOPVykup</h1>
+        <div class="h3">TOPVykup</div>
         <application-form></application-form>
       </div>
     </div>
@@ -1066,12 +1066,12 @@
   </main>
 
 
-  <script src="../components/GlobalButton.js"></script>
-  <script src="../components/ApplicationForm.js"></script>
-  <script src="../components/ApplicationFormPopUp.js"></script>
-  <script src="../js/main.js"></script>
+  <script type="module" src="../components/GlobalButton.js"></script>
+  <script type="module" src="../components/ApplicationForm.js"></script>
+  <script type="module" src="../components/ApplicationFormPopUp.js"></script>
+  <script type="module" src="../js/main.js"></script>
+  <script type="module" src="../js/home.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-  <script src="../js/home.js"></script>
   </body>
 </html>
