fix: add 768-1024 styles
* add 768-1024 styles for home page and header
* add new breakpoint to 'buttonConfigs'

--- a/pages/home.html
+++ b/pages/home.html
@@ -1037,8 +1037,8 @@
           <div class="logo-block">
             <img src="../img/editor-logo.svg" alt="editor-logo-image">
           </div>
-          <div class="editor editor-2">
-            <img src="../img/editor-2.jpg" alt="/editor-2-image">
+          <div class="editor">
+            <img src="../img/editor-2.jpg" alt="editor-2-image">
             <div class="editor-info">
               <a>
                 <span>
