--- a/pages/home.html
+++ b/pages/home.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TopVykup - Главная</title>
+    <title>Home</title>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -683,7 +683,7 @@
               <a>Черкасах</a>, 
               <a>Сумах</a>, 
               <a>Рівному</a>, 
-              <a>Вінниці</a> та 
+              <a href="vinnytsia.html">Вінниці</a> та 
               <a>інших містах</a>
             </p>
           </div>
