feat: add 'article' page

--- a/pages/home.html
+++ b/pages/home.html
@@ -17,7 +17,7 @@
 
   <div id="header"></div>
 
-  <main style="width: 100%;">
+  <main style="width: 100%; background-color: #15151857;">
     <div class="hero">
       <img src="../img/hero-car.svg" alt="Car" class="hero-car" />
       <img src="../img/hero-field-mobile.png" alt="Car" class="hero-field-mobile" />
@@ -850,15 +850,15 @@
             </div>
           </div>
         </div>
-          <global-button
-            id="blog-articles-button"
-            text="БЛОГ"
-            bgcolor="#7AB8FF"
-            imgsrc="../img/button-arrow.svg"
-            alignSelf="center"
-            href="blog.html"
-          >
-          </global-button>
+        <global-button
+          id="blog-articles-button"
+          text="БЛОГ"
+          bgcolor="#7AB8FF"
+          imgsrc="../img/button-arrow.svg"
+          alignSelf="center"
+          href="blog.html"
+        >
+        </global-button>
       </div>
     </div>
 
