--- a/pages/author.html
+++ b/pages/author.html
@@ -17,7 +17,7 @@
 
   <div id="header"></div>
 
-  <main style="width: 100%;">
+  <main style="width: 100%; background-color: #15151857;">
     <div class="hero">
       <div class="hero-navigation-text-block">
         <a href="home.html">
