--- a/pages/lviv.html
+++ b/pages/lviv.html
@@ -17,7 +17,7 @@
 
     <div id="header"></div>
 
-    <main style="width: 100%;">
+    <main style="width: 100%; background-color: #15151857;">
       <div class="hero">
         <img src="../img/lviv-hero-mobile.png" alt="Car" class="lviv-hero-mobile" />
         <div class="hero-navigation-text-block">
