fix: various fixes
* moved code for “Останні статті блогу” into a separate component with the ability to pass the section name, image, date, title and text for the article
* moved code for “Відгуки” into a separate component
* moved code for “ВИКУПЛЕНІ АВТОМОБІЛІ ПІСЛЯ ДТП” into a separate component with the ability to pass image, title and text for the card
* hero image fix on desktop on 'home' page
* 'sell-today-button' width fix on 'lviv' page

--- a/pages/article.html
+++ b/pages/article.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../css/article.css">
+    <link rel="stylesheet" href="../css/blog-section.css">
   </head>
 
     <div id="header"></div>
@@ -358,152 +359,7 @@
         </div>
       </div>
 
-      <div class="blog-articles">
-        <div class="blog-articles-content">
-          <div class="h3">ОСТАННІ СТАТТІ БЛОГУ</div>
-          <div class="blog-articles-info-block">
-            <div class="blog-articles-info-block-item">
-              <img src="../img/blog-articles-1-image.jpg" alt="car-buyback-image">
-              <div class="blog-articles-item-info-block">
-                <p class="blog-articles-item-date">01.11.2024</p>
-                <p class="blog-articles-item-question">
-                  Кому та скільки платити податків за продаж авто?
-                </p>
-                <p class="blog-articles-item-answer">
-                  Продаж автомобіля може здатися простою справою, але варто пам’ятати про податки...
-                </p>
-                <div class="blog-articles-read-block">
-                  <p>ЧИТАТИ СТАТТЮ</p>
-                  <img
-                    id="read-1-article-arrow"
-                    src="../img/button-arrow-white.svg"
-                    alt="blog-articles-button-arrow-image"
-                  >
-                </div>
-              </div>
-            </div>
-            <div class="blog-articles-info-block-item">
-              <img src="../img/blog-articles-2-image.jpg" alt="blog-articles-2-image">
-              <div class="blog-articles-item-info-block">
-                <p class="blog-articles-item-date">27.08.2024</p>
-                <p class="blog-articles-item-question">
-                  Де найдешевші автомобілі в Європі
-                </p>
-                <p class="blog-articles-item-answer">
-                  Якщо ви задаєтесь питанням, де найдешевші авто в Європі, варто розглянути кілька країн
-                </p>
-                <div class="blog-articles-read-block">
-                  <p>ЧИТАТИ СТАТТЮ</p>
-                  <img
-                    id="read-2-article-arrow"
-                    src="../img/button-arrow-white.svg"
-                    alt="blog-articles-button-arrow-image"
-                  >
-                </div>
-              </div>
-            </div>
-            <div class="blog-articles-info-block-item">
-              <img src="../img/blog-articles-3-image.jpg" alt="blog-articles-3-image">
-              <div class="blog-articles-item-info-block">
-                <p class="blog-articles-item-date">05.06.2024</p>
-                <p class="blog-articles-item-question">
-                  Кому та скільки платити податків за продаж авто?
-                </p>
-                <p class="blog-articles-item-answer">
-                  Продаж автомобіля може здатися простою справою, але варто пам’ятати про податки...
-                </p>
-                <div class="blog-articles-read-block">
-                  <p>ЧИТАТИ СТАТТЮ</p>
-                  <img
-                    id="read-3-article-arrow"
-                    src="../img/button-arrow-white.svg"
-                    alt="blog-articles-button-arrow-image"
-                  >
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="blog-articles-slider-wrapper">
-            <div class="blog-articles-cars-slider">
-              <div class="blog-articles-cars-slider-block">
-                <div class="blog-articles-info-block-item">
-                  <img src="../img/blog-articles-1-image.jpg" alt="car-buyback-image">
-                  <div class="blog-articles-item-info-block">
-                    <p class="blog-articles-item-date">01.11.2024</p>
-                    <p class="blog-articles-item-question">
-                      Кому та скільки платити податків за продаж авто?
-                    </p>
-                    <p class="blog-articles-item-answer">
-                      Продаж автомобіля може здатися простою справою, але варто пам’ятати про податки...
-                    </p>
-                    <div class="blog-articles-read-block">
-                      <p>ЧИТАТИ СТАТТЮ</p>
-                      <img
-                        id="read-1-article-arrow"
-                        src="../img/button-arrow-white.svg"
-                        alt="blog-articles-button-arrow-image"
-                      >
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="blog-articles-cars-slider-block">
-                <div class="blog-articles-info-block-item">
-                  <img src="../img/blog-articles-2-image.jpg" alt="blog-articles-2-image">
-                  <div class="blog-articles-item-info-block">
-                    <p class="blog-articles-item-date">27.08.2024</p>
-                    <p class="blog-articles-item-question">
-                      Де найдешевші автомобілі в Європі
-                    </p>
-                    <p class="blog-articles-item-answer">
-                      Якщо ви задаєтесь питанням, де найдешевші авто в Європі, варто розглянути кілька країн
-                    </p>
-                    <div class="blog-articles-read-block">
-                      <p>ЧИТАТИ СТАТТЮ</p>
-                      <img
-                        id="read-2-article-arrow"
-                        src="../img/button-arrow-white.svg"
-                        alt="blog-articles-button-arrow-image"
-                      >
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="blog-articles-cars-slider-block">
-                <div class="blog-articles-info-block-item">
-                  <img src="../img/blog-articles-3-image.jpg" alt="blog-articles-3-image">
-                  <div class="blog-articles-item-info-block">
-                    <p class="blog-articles-item-date">05.06.2024</p>
-                    <p class="blog-articles-item-question">
-                      Кому та скільки платити податків за продаж авто?
-                    </p>
-                    <p class="blog-articles-item-answer">
-                      Продаж автомобіля може здатися простою справою, але варто пам’ятати про податки...
-                    </p>
-                    <div class="blog-articles-read-block">
-                      <p>ЧИТАТИ СТАТТЮ</p>
-                      <img
-                        id="read-3-article-arrow"
-                        src="../img/button-arrow-white.svg"
-                        alt="blog-articles-button-arrow-image"
-                      >
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <global-button
-            id="blog-articles-button"
-            text="БЛОГ"
-            bgcolor="#7AB8FF"
-            imgsrc="../img/button-arrow.svg"
-            alignSelf="center"
-            href="blog.html"
-          >
-          </global-button>
-        </div>
-      </div>
+      <div id="blog-articles-placeholder"></div>
 
       <div class="reviews">
         <div class="review-floating-block"></div>
