fix: various style fixes, add 'whiteShadow' prop to global btn

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -51,6 +51,7 @@
                 text="ЗАВАНТАЖИТИ ЩЕ"
                 bgcolor="#E3EAF1"
                 imgsrc="../img/blog-show-more-button.svg"
+                whiteShadow="true"
               ></global-button>
             </div>
             <div class="blog-articles-slider-nav-block">
