--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -63,6 +63,7 @@
               text="НАПИСАТИ У VIBER"
               bgcolor="#E3EAF1"
               imgsrc="../img/button-arrow.svg"
+              whiteShadow="true"
             >
             </global-button>
           </div>
