--- a/pages/vinnytsia.html
+++ b/pages/vinnytsia.html
@@ -53,6 +53,7 @@
               text="НАПИСАТИ У VIBER"
               bgcolor="#E3EAF1"
               imgsrc="../img/button-arrow.svg"
+              whiteShadow="true"
             >
             </global-button>
           </div>
@@ -92,6 +93,7 @@
               text="НАПИСАТИ У VIBER"
               bgcolor="#E3EAF1"
               imgsrc="../img/button-arrow.svg"
+              whiteShadow="true"
             >
             </global-button>
             <div class="urgent-buyback-white-block">
@@ -232,6 +234,7 @@
             text="НАПИСАТИ У VIBER"
             bgcolor="#E3EAF1"
             imgsrc="../img/button-arrow.svg"
+            whiteShadow="true"
           >
           </global-button>
         </div>
@@ -272,6 +275,7 @@
           text="НАПИСАТИ У VIBER"
           bgcolor="#E3EAF1"
           imgsrc="../img/button-arrow.svg"
+          whiteShadow="true"
         >
         </global-button>
       </div>
