--- a/pages/home.html
+++ b/pages/home.html
@@ -55,6 +55,7 @@
             text="НАПИСАТИ У VIBER"
             bgcolor="#E3EAF1"
             imgsrc="../img/button-arrow.svg"
+            whiteShadow="true"
           >
           </global-button>
         </div>
