--- a/pages/lviv.html
+++ b/pages/lviv.html
@@ -60,6 +60,7 @@
               text="НАПИСАТИ У VIBER"
               bgcolor="#E3EAF1"
               imgsrc="../img/button-arrow.svg"
+              whiteShadow="true"
             >
             </global-button>
           </div>
