feat: add scroll to top button fixed on bottom right corner

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -34,7 +34,7 @@
               <span style="color:rgba(122, 184, 255, 1);">Блог</span>
             </a>
           </div>
-          <div class="header">
+          <div class="hero">
             <h1>Блог про автовикуп</h1>
             <span>
               Слідкуйте за новинами індустрії автовикупу та нашими експертними аналізами
@@ -96,7 +96,9 @@
         </div>
         <div class="sell-today-white-block"></div>
       </div>
+
       <div id="footer"></div>
+
     </main>
 
 
